css changed to customize theme

--- a/minimal_theme/index2.html
+++ b/minimal_theme/index2.html
@@ -513,7 +513,7 @@ _________________________________________________________ -->
                                 <!-- /.text -->
 
                                 <div class="ribbon sale">
-                                    <div class="theribbon">SALE</div>
+                                    <div class="theribbon">FEATUERED</div>
                                     <div class="ribbon-background"></div>
                                 </div>
                                 <!-- /.ribbon -->
