--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en" ng-app="app">
 <head>
   <meta charset="utf-8">
-  <base href="/">
   <title>Stylebar</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <link href="app/css/owl.carousel.css" rel="stylesheet">
+  <link href="app/css/owl.theme.css" rel="stylesheet">
+
+  <link href="app/css/style.css" rel="stylesheet">
+
+  <link href="app/css/customize.css" rel="stylesheet">
 
 </head>
 <body ng-class="bodyClass">
@@ -19,10 +25,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-cookies.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
-<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-<script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+
+  <script src="app/scripts/jquery-1.11.0.min.js"></script>
+  <script src="app/scripts/owl.carousel.min.js"></script>
 
   <script src="app/app.js"></script>
+  <script src="app/js/wrapOwlcarousel.js"></script>
+  <script src="app/js/HomeController.js"></script>
+  <script src="app/js/ClothesController.js"></script>
+  <script src="app/js/ProviderController.js"></script>
 
 </body>
 </html>
