add home page to app

--- a/minimal_theme/category-full.html
+++ b/minimal_theme/category-full.html
@@ -18,7 +18,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme stylesheet -->
-    <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+    <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheext">
 
     <!-- Custom stylesheet - for your changes -->
     <link href="css/custom.css" rel="stylesheet">
