--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
   <meta charset="utf-8">
   <title>Stylebar</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  <link href="app/css/owl.carousel.css" rel="stylesheet">
-  <link href="app/css/owl.theme.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather:400,400italic' rel='stylesheet' type='text/css'>
 
-  <link href="app/css/style.css" rel="stylesheet">
+     <link href='https://www.google.com/fonts#UsePlace:use/Collection:Lato:400,100,300' rel='stylesheet' type='text/css'>
 
-  <link href="app/css/customize.css" rel="stylesheet">
+    <!-- Bootstrap and Font Awesome css -->
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Theme stylesheet -->
+    <link href="css/style.default.css" rel="stylesheet" id="theme-stylesheet">
+
+    <!-- Custom stylesheet - for your changes -->
+    <link href="css/custom.css" rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="favicon.png">
+    <!-- owl carousel css -->
+
+    <link href="css/owl.carousel.css" rel="stylesheet">
+    <link href="css/owl.theme.css" rel="stylesheet">
 
 </head>
 <body ng-class="bodyClass">
@@ -25,6 +35,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-cookies.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/0.7.2/angular-scroll.js"></script>
+  
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
@@ -34,8 +46,8 @@
   <script src="app/app.js"></script>
   <script src="app/js/wrapOwlcarousel.js"></script>
   <script src="app/js/HomeController.js"></script>
-  <script src="app/js/ClothesController.js"></script>
-  <script src="app/js/ProviderController.js"></script>
+  <script src="app/js/BrowsingController.js"></script>
+  <script src="app/js/StylistController.js"></script>
 
 </body>
 </html>
