stylist page reviews

--- a/minimal_theme/blog.html
+++ b/minimal_theme/blog.html
@@ -497,30 +497,20 @@ _________________________________________________________ -->
         <!-- *** FOOTER ***
 _________________________________________________________ -->
 
+      
         <div id="footer">
             <div class="container">
                 <div class="col-md-3 col-sm-6">
                     <h4>Pages</h4>
 
                     <ul>
-                        <li><a href="text.html">About us</a>
+                        <li><a href="text.html">How it Works</a>
                         </li>
-                        <li><a href="text-left.html">Terms and conditions</a>
+                        <li><a href="text-left.html">Style Me</a>
                         </li>
-                        <li><a href="faq.html">FAQ</a>
+                        <li><a href="faq.html">Our Stylists</a>
                         </li>
-                        <li><a href="contact.html">Contact us</a>
-                        </li>
-                    </ul>
-
-                    <hr>
-
-                    <h4>User section</h4>
-
-                    <ul>
-                        <li><a href="#" data-toggle="modal" data-target="#login-modal">Login</a>
-                        </li>
-                        <li><a href="register.html">Regiter</a>
+                        <li><a href="contact.html">Stylefile</a>
                         </li>
                     </ul>
 
@@ -531,28 +521,16 @@ _________________________________________________________ -->
 
                 <div class="col-md-3 col-sm-6">
 
-                    <h4>Top categories</h4>
-
-                    <h5>Men</h5>
+                    <h4>Customer Support</h4>
 
                     <ul>
-                        <li><a href="category.html">T-shirts</a>
+                        <li><a href="text.html">Login</a>
                         </li>
-                        <li><a href="category.html">Shirts</a>
+                        <li><a href="text-left.html">Style Me</a>
                         </li>
-                        <li><a href="category.html">Accessories</a>
+                        <li><a href="faq.html">Register</a>
                         </li>
-                    </ul>
-
-                    <h5>Ladies</h5>
-                    <ul>
-                        <li><a href="category.html">T-shirts</a>
-                        </li>
-                        <li><a href="category.html">Skirts</a>
-                        </li>
-                        <li><a href="category.html">Pants</a>
-                        </li>
-                        <li><a href="category.html">Accessories</a>
+                        <li><a href="contact.html">FAQ</a>
                         </li>
                     </ul>
 
@@ -563,18 +541,18 @@ _________________________________________________________ -->
 
                 <div class="col-md-3 col-sm-6">
 
-                    <h4>Where to find us</h4>
+                    <h4>Stylist Resources</h4>
 
-                    <p><strong>Obaju Ltd.</strong>
-                        <br>13/25 New Avenue
-                        <br>New Heaven
-                        <br>45Y 73J
-                        <br>England
-                        <br>
-                        <strong>Great Britain</strong>
-                    </p>
-
-                    <a href="contact.html">Go to contact page</a>
+                    <ul>
+                        <li><a href="text.html">Login</a>
+                        </li>
+                        <li><a href="text-left.html">Apply to be a Stylebar Stylist</a>
+                        </li>
+                        <li><a href="faq.html">FAQ</a>
+                        </li>
+                        <li><a href="contact.html">Read our Stylefile</a>
+                        </li>
+                    </ul>
 
                     <hr class="hidden-md hidden-lg hidden-sm">
 
@@ -585,9 +563,9 @@ _________________________________________________________ -->
 
                 <div class="col-md-3 col-sm-6">
 
-                    <h4>Get the news</h4>
+                    <h4>Subscribe to Stylebar's Newsletter!</h4>
 
-                    <p class="text-muted">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p class="text-muted">We send you tips and tricks from our collection of stylists to help you with day to day styling questions.</p>
 
                     <form>
                         <div class="input-group">
@@ -596,17 +574,18 @@ _________________________________________________________ -->
 
                             <span class="input-group-btn">
 
-			<button class="btn btn-default" type="button">Subscribe!</button>
+            <button class="btn btn-default" type="button">Subscribe!</button>
 
-		    </span>
+            </span>
 
                         </div>
                         <!-- /input-group -->
                     </form>
 
-                    <hr>
+                </div>
+                <!-- /.col-md-3 -->
 
-                    <h4>Stay in touch</h4>
+                <div class="col-md-12 col-sm-12">
 
                     <p class="social">
                         <a href="#"><i class="fa fa-facebook-square"></i></a>
@@ -615,9 +594,9 @@ _________________________________________________________ -->
                         <a href="#"><i class="fa fa-envelope"></i></a>
                     </p>
 
-
                 </div>
-                <!-- /.col-md-3 -->
+                <!-- /.col-md-12 -->
+
             </div>
             <!-- /.container -->
         </div>
