added more book buttons

--- a/minimal_theme/detail.html
+++ b/minimal_theme/detail.html
@@ -398,6 +398,7 @@ _________________________________________________________ -->
                         <h3 class="text-uppercase">Featured Looks</h3>
 
                         <h4 class="text-muted">Browse some of Sofia's most beloved transformations</h4>
+                           <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>
                     </div>
 
                     <div class="row products">
@@ -646,8 +647,10 @@ _________________________________________________________ -->
         </div>
 
 
-    </div>               
-
+    </div>    
+    <center>   
+     <p><a class="btn btn-lg " href="#content" role="button">BOOK NOW</a>     
+    </center>   
         <!-- *** FOOTER ***
 _________________________________________________________ -->
 
