--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <script src="app/js/HomeController.js"></script>
   <script src="app/js/BrowsingController.js"></script>
   <script src="app/js/StylistController.js"></script>
+  <script src="app/js/Stylists.js"></script>
 
 </body>
 </html>
