--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body ng-class="bodyClass">
 
-  <div ui-view></div>
+  <div ui-view autoscroll="true"></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
