--- a/index.html
+++ b/index.html
@@ -50,5 +50,7 @@
   <script src="app/js/StylistController.js"></script>
   <script src="app/js/Stylists.js"></script>
 
+  <script src="app/js/QuestionController.js"></script>
+
 </body>
 </html>
